Some CSS changes...
around contrast/readability and corner cases.

--- a/frontend/public/components/_list.scss
+++ b/frontend/public/components/_list.scss
@@ -22,6 +22,7 @@
   line-height: 1;
   &__sort-arrow {
     margin-left: 10px;
+    color: $color-grey-medium;
   }
   &__sort-link--unsorted {
     color: $color-grey-medium;
