Use inertial scrolling for sidebar.
We already have this for the main content area. Without it, scrolling on touch screens is a huge pain.

--- a/frontend/public/components/_nav.scss
+++ b/frontend/public/components/_nav.scss
@@ -45,6 +45,7 @@ $active-border: 3px;
   overflow-x: hidden;
   overflow-y: auto;
   flex-grow: 1;
+  -webkit-overflow-scrolling: touch;
 }
 
 .navigation-container__list {
