--- a/frontend/public/components/utils/_label.scss
+++ b/frontend/public/components/utils/_label.scss
@@ -6,11 +6,11 @@ $height: 18px;
   max-width: 100%;
   border-radius: 10px;
   padding: 0px 8px;
-  height: $height;
+  height: ($height + 3);
   line-height: $height;
   margin: 1px;
   background-color: $color-grey-background;
-  font-size: 12px;
+  font-size: $font-size-base;
   border: solid 1px $color-grey-border;
 
   &__key, &__value {
