Fix bug where no margin when columns stack on details pages
Fixes https://jira.coreos.com/browse/CONSOLE-376

--- a/frontend/public/style/_common.scss
+++ b/frontend/public/style/_common.scss
@@ -25,8 +25,15 @@
   margin-bottom: 30px;
 }
 
-.co-m-pane__details dd {
-  font-size: 14px;
+.co-m-pane__details {
+  // TODO: refactor so <dl>s have margin-bottom by default
+  margin-bottom: 20px;
+  .co-detail-table__row & {
+    margin-bottom: 0;
+  }
+  dd {
+    font-size: 14px;
+  }
 }
 
 .co-m-pane__explanation {
