--- a/frontend/public/style/_base.scss
+++ b/frontend/public/style/_base.scss
@@ -16,7 +16,8 @@ dl {
 
 dt {
   text-transform: uppercase;
-  font-weight: 300;
+  font-weight: 400;
+  color: $color-text-secondary;
   font-size: 12px; }
 
 dd {
