--- a/frontend/public/components/RBAC/_rbac.scss
+++ b/frontend/public/components/RBAC/_rbac.scss
@@ -30,12 +30,15 @@
     margin-top: 30px;
   }
   .help-text {
+    color: $color-text-secondary;
+    font-weight: 400;
     position: relative;
     top: -3px;
     left: 20px;
   }
   .checkbox-label {
     margin-bottom: 5px;
+    font-weight: 400;
   }
 
   .rbac-minor {
