--- a/frontend/public/style/_vars.scss
+++ b/frontend/public/style/_vars.scss
@@ -50,6 +50,7 @@ $color-border-brown: #947663;
 $color-grey-when-selected: #e5e5e5;
 
 $color-text-muted: $co-gray;
+$color-text-secondary: $color-grey-medium;
 
 //OpenShift color variables
 $color-os-nav-title: #d1d1d1;
