Initial Environment Editor WIP commit

--- a/frontend/public/style.scss
+++ b/frontend/public/style.scss
@@ -70,3 +70,6 @@
 @import "components/modals/modals";
 @import "components/open-shift-masthead";
 @import "components/nav";
+@import "components/environment";
+@import "components/utils/name-value-editor";
+@import "components/utils/value-from-pair";
