CSS changes to prevent overview event type select dropdown menu from being hidden - Removed overflow:hidden from .group__body and adjusted definition list spacing to maintain existing title spacing - Apply .group__graphs class to set overflow:hidden - Set max-height and scroll to .co-type-selector .dropdown-menu to reduce page scroll and allow Events box to remain in view. Fixes https://jira.coreos.com/browse/CONSOLE-370

--- a/frontend/public/components/_resource-dropdown.scss
+++ b/frontend/public/components/_resource-dropdown.scss
@@ -9,7 +9,12 @@
     margin-right: -2px;
   }
 
-  .dropdown-menu a {
-    padding: 4px 20px 4px 6px;
+  .dropdown-menu {
+    max-height: 80vh;
+    overflow-x: hidden;
+    overflow-y: auto;
+    a {
+      padding: 4px 20px 4px 6px;
+    }
   }
 }
