--- a/frontend/public/components/cluster-settings/_cluster-settings.scss
+++ b/frontend/public/components/cluster-settings/_cluster-settings.scss
@@ -41,13 +41,12 @@
 .co-p-cluster__doc-title {
   font-weight: 600;
   font-size: 14px;
-  margin-top: 12px;
+  padding-top: 12px;
   text-transform: none;
 }
 
 .co-p-cluster__doc-description {
   margin-top: 8px;
-  margin-bottom: 32px;
 }
 
 .co-p-cluster__sidebar-link {
