--- a/frontend/public/components/_cluster-overview.scss
+++ b/frontend/public/components/_cluster-overview.scss
@@ -17,6 +17,9 @@
   border-top: none;
   padding-left: ($grid-gutter-width / 2);
   padding-right: ($grid-gutter-width / 2);
+}
+
+.group__graphs {
   overflow: hidden;
 }
 
