fix detail header styling

--- a/frontend/public/components/cloud-services/_cloud-services.scss
+++ b/frontend/public/components/cloud-services/_cloud-services.scss
@@ -62,6 +62,10 @@ $clusterserviceversion-list-border: #ccc;
   margin-bottom: 5px;
 }
 
+.co-clusterserviceversion-logo__name__provider {
+  font-size: 13px;
+}
+
 .co-clusterserviceversion-list-item__actions {
   align-items: center;
   display: flex;
