--- a/frontend/public/components/_cluster-picker.scss
+++ b/frontend/public/components/_cluster-picker.scss
@@ -2,7 +2,7 @@
   background-color: $color-os-nav-active;
   border-radius: 1px;
   color: $color-os-nav-title;
-  margin: 0 10px;
+  margin: 7px 10px;
   padding: 2px 0 2px 10px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
 
@@ -21,6 +21,7 @@
     ul.dropdown-menu {
       box-shadow: 0 2px 4px rgba(0,0,0,0.175);
       margin-left: -10px;
+      margin-top: 2px;
       min-width: 200px;
       > li {
         &.active > a {
