--- a/frontend/public/components/_nav.scss
+++ b/frontend/public/components/_nav.scss
@@ -40,11 +40,9 @@ $active-border: 3px;
 }
 
 .navigation-container {
-  background-color: $color-os-nav-background;
-  background-size: auto, 100% 100%;
+  flex: 1 1 auto;
   overflow-x: hidden;
   overflow-y: auto;
-  flex-grow: 1;
   -webkit-overflow-scrolling: touch;
 }
 
@@ -56,9 +54,7 @@ $active-border: 3px;
 }
 
 .navigation-container__section, .navigation-container__section__separator {
-  background-color: $color-os-nav-background;
   border-bottom: 1px solid $color-os-nav-item-seperator;
-  color: white;
 }
 
 .navigation-container__section--active {
@@ -75,7 +71,6 @@ $active-border: 3px;
 
 .navigation-container__section__separator {
   margin: 8px 20px 8px 40px;
-  padding: 0;
 }
 
 .navigation-container__section__title {
@@ -127,9 +122,4 @@ $active-border: 3px;
 
 .navigation-container__section__title__icon--active {
   color: $color-os-nav-border-left-active;
-}
-
-.navigation-container__section--logo {
-  padding: 7px 0;
-  margin-top: 0px;
 }
