Remove vertnav font weight.
Everything else on the page had normal font weight, making this text look really thin. Also, use color: inherit instead of color: black. We overrode the color to black because the font was so thin.

--- a/frontend/public/components/_vert-nav.scss
+++ b/frontend/public/components/_vert-nav.scss
@@ -35,10 +35,9 @@ $min-height: 200px;
     color: $color-highlight-blue;
   }
   a {
-    color: black;
+    color: inherit;
     text-decoration: none;
     padding: 10px;
-    font-weight: 300;
   }
 }
 
