Add Projects pages
- Add Project list and details pages based off existing Namespace page
- Update CreateNamespaceModal to also create projects
- Update DeleteNamespaceModal to also delete projects
- Hide Namespaces nav and all projects menu if user can't list namespaces

--- a/frontend/public/components/_resource.scss
+++ b/frontend/public/components/_resource.scss
@@ -51,7 +51,8 @@ $height: 18px;
   background-color: $color-pod-dark;
 }
 
-.co-m-resource-namespace {
+.co-m-resource-namespace,
+.co-m-resource-project {
   background-color: $color-namespace-dark;
 }
 
