--- a/frontend/public/style/_text.scss
+++ b/frontend/public/style/_text.scss
@@ -8,6 +8,7 @@ $kinds: (
   namespace: $color-namespace-dark,
   node: $color-node-dark,
   pod: $color-pod-dark,
+  project: $color-namespace-dark,
   replicaset: $color-replicaset-dark,
   replicationcontroller: $color-controller-dark,
   secret: $color-secret-dark,
