--- a/frontend/public/components/cloud-services/_cloud-services.scss
+++ b/frontend/public/components/cloud-services/_cloud-services.scss
@@ -3,19 +3,21 @@ $clusterserviceversion-list-border: #ccc;
 .co-clusterserviceversion-list {
   display: flex;
   flex-wrap: wrap;
+  margin: 0 -7.5px 0;
 }
 
 .co-clusterserviceversion-list__tile {
-  @media (min-width: 768px) {
+  padding: 0 7.5px 15px;
+  width: 100%;
+  @media (min-width: $screen-sm) {
     width: 50%;
   }
-  @media (min-width: 1024px) {
-    width: 33%;
+  @media (min-width: $screen-md) {
+    width: 33.333%;
   }
   @media (min-width: 1920px) {
     width: 25%;
   }
-  padding: 0 15px 15px 0;
 }
 
 .co-clusterserviceversion-list-item {
@@ -28,8 +30,9 @@ $clusterserviceversion-list-border: #ccc;
 }
 
 .co-clusterserviceversion-list__title {
-  font-size: 18px;
-  padding: 0 10px 15px 15px;
+  margin-bottom: 0;
+  margin-top: 30px;
+  padding: 0 30px;
 }
 
 .co-clusterserviceversion-logo {
