--- a/frontend/public/components/_nav-title.scss
+++ b/frontend/public/components/_nav-title.scss
@@ -10,6 +10,7 @@
 .co-m-page-title {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin: 0;
   padding: 30px 0 0;
   .co-m-page-title__icon {
