--- a/frontend/public/components/_openshift-masthead.scss
+++ b/frontend/public/components/_openshift-masthead.scss
@@ -1,57 +1,12 @@
-.os-masthead {
-  background-color: $color-pf-black;
-  color: $color-os-nav-title;
-}
-
 .os-header {
-  align-items: center;
   display: flex;
   height: 40px;
   @media (min-width: $grid-float-breakpoint) {
     height: 60px;
   }
-}
-
-.os-header__navbar-toggle {
-  background-color: transparent;
-  background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
-  border: 0;
-  margin: 0 5px;
-  padding: 9px 10px;
-  position: relative;
-
-  @media (min-width: $grid-float-breakpoint) {
-    display: none;
-  }
-
-  &:focus,
-  &:hover {
-    .icon-bar {
-      background: $navbar-pf-vertical-navbar-toggle-icon-bar-hover-bg;
-    }
-  }
-
-  .icon-bar {
-    background: $navbar-pf-vertical-color;
-    border-radius: 1px;
-    display: block;
-    height: 2px;
-    width: 22px;
-  }
-  .icon-bar + .icon-bar {
-    margin-top: 4px;
-  }
-}
-
-.os-header__logo {
-  align-items: center;
-  display: flex;
-  height: 100%;
-  margin-left: 0;
-  margin-right: 20px;
-  @media (min-width: $grid-float-breakpoint) {
-    margin-left: 20px;
-  }
+  background-color: $color-pf-black;
+  color: $color-os-nav-title;
+  flex: 1 1 auto;
 }
 
 .os-header__console-picker {
