--- a/frontend/public/style/_layout.scss
+++ b/frontend/public/style/_layout.scss
@@ -7,15 +7,10 @@ html {
 body {
   display: flex;
   flex-direction: column;
-  height: 100%;
-  overflow-y: hidden;
+  min-height: 100vh;
 }
 
 #app {
-  height: 100%;
-}
-
-.co-container {
   display: flex;
   height: 100%;
   flex-direction: column;
@@ -25,44 +20,93 @@ body {
 
 #reflex {
   display: flex;
-  height: 100%;
-  position: relative;
+// <<<<<<< HEAD
+//   height: 100%;
+//   position: relative;
+// =======
+  flex-direction: row;
+  flex: 1 1 auto;
+// >>>>>>> Fix scrolling issues with react-virtualized.
 }
 
 #sidebar {
   background-color: $color-os-nav-background;
-  bottom: 0;
   display: flex;
   flex: 0 0 auto;
   flex-direction: column;
-  left: -($sidebar-width);
-  position: absolute;
-  top: 0;
-  width: $sidebar-width;
   z-index: $zindex-navbar;
-
-  @media (min-width: $grid-float-breakpoint) {
-    box-shadow: none !important;
-    position: static;
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  // width: 0;
+  width: $sidebar-width;
 
   &.open {
-    box-shadow: 2px 0 3px rgba(0,0,0,.3);
-    left: 0;
-    transition: left .1s ease-in-out;
+    bottom: 0;
+    // box-shadow: 2px 0 3px rgba(0,0,0,.3);
+    width: $sidebar-width;
+    // display: block;
+  }
+  .sidebar__header {
+    height: 40px;
+    display: flex;
+    flex-direction: row;
+    flex: 0 0 auto;
+    background-color: $color-pf-black;
+    @media (min-width: $grid-float-breakpoint) {
+      height: 60px;
+    }
+  }
+  .sidebar__logo {
+    align-items: center;
+    display: flex;
+    height: 100%;
+    margin-left: 0;
+    margin-right: 20px;
+    // @media (min-width: $grid-float-breakpoint) {
+    //   margin-left: 20px;
+    // }
+    max-width: 100%;
+  }
+  .sidebar__toggle {
+    background-color: transparent;
+    border: 0;
+    margin: 0;
+    padding: 9px 15px;
+    position: relative;
+
+    // @media (min-width: $grid-float-breakpoint) {
+    //   display: none;
+    // }
+
+    &:focus,
+    &:hover {
+      .icon-bar {
+        background: $navbar-pf-vertical-navbar-toggle-icon-bar-hover-bg;
+      }
+    }
+
+    .icon-bar {
+      background: $navbar-pf-vertical-color;
+      border-radius: 1px;
+      display: block;
+      height: 2px;
+      width: 22px;
+    }
+    .icon-bar + .icon-bar {
+      margin-top: 4px;
+    }
   }
 }
 
 #content {
-  display: flex;
-  flex: 1 1 auto;
-  flex-direction: column;
+  background: white;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
-}
-
-.co-m-list {
-  height: 100%;
+  flex: 1 1 auto;
+  @media (min-width: $grid-float-breakpoint) {
+    margin-left: $sidebar-width;
+  }
 }
 
 .absolute-zero {
