--- a/frontend/public/components/_cluster-picker.scss
+++ b/frontend/public/components/_cluster-picker.scss
@@ -4,7 +4,6 @@
   color: $color-os-nav-title;
   margin: 7px 10px;
   padding: 2px 0 2px 10px;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
 
   .dropdown {
     .dropdown__not-btn {
@@ -23,13 +22,23 @@
       margin-left: -10px;
       margin-top: 2px;
       min-width: 200px;
+      @media(max-width: $grid-float-breakpoint-max) {
+        width: 200px;
+      }
       > li {
         &.active > a {
           background-color: $color-os-nav-active !important;
           border-color: transparent !important;
         }
-        > a:hover {
-          background-color: $color-os-nav-hover;
+        > a {
+          @media(max-width: $grid-float-breakpoint-max) {
+            white-space: normal;
+            width: 100%;
+            word-break: break-word;
+          }
+          &:hover {
+            background-color: $color-os-nav-hover;
+          }
         }
       }
     }
