Update documentation links for OpenShift

--- a/frontend/public/components/_cluster-overview.scss
+++ b/frontend/public/components/_cluster-overview.scss
@@ -19,6 +19,15 @@
   border-top: none;
 }
 
+.group__documentation {
+  padding-bottom: 12px;
+  padding-top: 12px;
+}
+
+.group__additional-support {
+  padding-top: 12px;
+}
+
 .group__graphs {
   overflow: hidden;
 }
