--- a/frontend/public/style.scss
+++ b/frontend/public/style.scss
@@ -69,3 +69,4 @@
 @import "components/modals/modals";
 @import "components/openshift-masthead";
 @import "components/nav";
+@import "components/documentation";
